Documentation/4.0/Raven.Documentation.Pages/studio/server/databases/create-new-database/encrypted.markdown
# Create a Database: Encrypted
---

{NOTE: }

* Encryption is possible only if authentication is enabled and a server certificate is defined

* Learn more about **encryption** in: [Encryption At Rest](../../../../server/security/encryption/encryption-at-rest)  
  Learn how to enable **authentication** in: [Certificate Configuration](../../../../server/security/authentication/certificate-configuration)  
  Learn about the **secret key** in: [Secret Key Management](../../../../server/security/encryption/secret-key-management)  
{NOTE/}

---

{WARNING: WARNING}

   * You will not have access to the database if the encryption key is lost.  
   * Download, print, or copy and save the key in a safe place. **It will not be available again!**  
   {WARNING/}

{PANEL: Creating Encrypted Database}

* In addition to the steps described in the [General Database Creation](../../../../studio/server/databases/create-new-database/general-flow), click the `Encryption` tab.  


![Figure 1. Create New Database - Encrypted](images/new-database-encrypted.png "Encrypted Database")

1. **Key**
   * This is the base 64 key generated by the server.  
   * A different new key can be generated by the server when clicking the `refresh` button.  
   * Learn more about this key in: [Secret Key Management](../../../../server/security/encryption/secret-key-management)  

2. **QR Code**
   * The QR code representing the key  

3. **Confirm that you've securely saved the key**



{PANEL/}
