Documentation/4.1/Raven.Documentation.Pages/studio/server/databases/create-new-database/encrypted.markdown
# Create a Database: Encrypted


{NOTE: }

* Encrypted databases in RavenDB use Daniel J. Bernstein's [XChaCha20-Poly1305](https://libsodium.gitbook.io/doc/secret-key_cryptography/aead/chacha20-poly1305/xchacha20-poly1305_construction) 
 authenticated encryption algorithm. They are encrypted at rest and by default, also in transit.  

* Encryption is possible only if [security authentication is enabled](../../../../start/installation/setup-wizard) and a server certificate is defined.

* Learn more about **encryption** in: [Encryption At Rest](../../../../server/security/encryption/encryption-at-rest).  
  Learn how to enable **authentication** in: [Certificate Configuration](../../../../server/security/authentication/certificate-configuration).  
  Learn about the **secret key** in: [Secret Key Management](../../../../server/security/encryption/secret-key-management).  
{NOTE/}

---



{PANEL: Creating Encrypted Database}

* In addition to the steps described in the [General Database Creation](../../../../studio/server/databases/create-new-database/general-flow), click the `Encryption` tab.  


![Figure 1. Create New Database - Encrypted](images/new-database-encrypted.png "Encrypted Database")

1. **Name**  
   Give this database a meaningful name.  

2. **Encryption**  
   Toggle to activate encryption on the new database.  When it is activated, the **Encryption Configuration** view with the key and QR code should open.  

3. **Key**  
   * This is the base 64 key generated by the server.  
   * A different new key can be generated by the server when clicking the `refresh` button.  
   * Learn more about this key in: [Secret Key Management](../../../../server/security/encryption/secret-key-management)  

4. **QR Code**  
   * The QR code representing the key  
5. **Confirm that you've securely saved the key**  
    {WARNING: WARNING}

    * You will not have access to the database if the key is lost.  
    * Download, print, or copy and save the key in a safe place. **It will not be available again!**  
    {WARNING/}

{PANEL/}

## Related Articles

**Studio Articles**:   
[Create a Database : From Backup](../../../../studio/server/databases/create-new-database/from-backup)   
[Create a Database : General Flow](../../../../studio/server/databases/create-new-database/general-flow)          
[The Backup Task](../../../../studio/database/tasks/ongoing-tasks/backup-task)    

**Client Articles**:  
[Restore](../../../../client-api/operations/maintenance/backup/restore)   
[Operations: How to Restore a Database from Backup](../../../../client-api/operations/server-wide/restore-backup)    
[What Is Smuggler](../../../../client-api/smuggler/what-is-smuggler)   
[Backup](../../../../client-api/operations/maintenance/backup/backup)

**Server Articles**:  
[Backup Overview](../../../../server/ongoing-tasks/backup-overview)

**Migration Articles**:  
[Migration](../../../../migration/server/data-migration) 
